# anode-evals

./: .gitignore  Cargo.toml  README.md  TODO.md
13fec117-c246-4ed7-9e39-498def3eefca/: 13fec117-c246-4ed7-9e39-498def3eefca.json  13fec117-c246-4ed7-9e39-498def3eefca_report.md
2374410a-aec9-4709-8bdc-269c1d580655/: 2374410a-aec9-4709-8bdc-269c1d580655.json  2374410a-aec9-4709-8bdc-269c1d580655_report.md
248b8f73-e81e-40b1-b1a0-f379c3ef33df/: 248b8f73-e81e-40b1-b1a0-f379c3ef33df.json  248b8f73-e81e-40b1-b1a0-f379c3ef33df_report.md
939179bd-758e-41b9-82a7-7b52c57e5fb9/: 939179bd-758e-41b9-82a7-7b52c57e5fb9.json  939179bd-758e-41b9-82a7-7b52c57e5fb9_report.md
ae4e6714-b6e7-40aa-8570-a63d5b0fbcb8/: ae4e6714-b6e7-40aa-8570-a63d5b0fbcb8.json  ae4e6714-b6e7-40aa-8570-a63d5b0fbcb8_report.md
b2b96451-d20d-4f6f-8c35-0088b627a6fc/: b2b96451-d20d-4f6f-8c35-0088b627a6fc.json  b2b96451-d20d-4f6f-8c35-0088b627a6fc_report.md
b92cc98f-05e2-4a95-bbdb-061c4b09da65/: b92cc98f-05e2-4a95-bbdb-061c4b09da65.json  b92cc98f-05e2-4a95-bbdb-061c4b09da65_report.md
d7a2de65-9f32-423d-bdf4-ff4182841883/: d7a2de65-9f32-423d-bdf4-ff4182841883.json  d7a2de65-9f32-423d-bdf4-ff4182841883_report.md
da21bf50-ec3e-4c71-af3c-74d2fa64486e/: da21bf50-ec3e-4c71-af3c-74d2fa64486e.json  da21bf50-ec3e-4c71-af3c-74d2fa64486e_report.md
examples/crm_api/: Cargo.toml  eval-config.yaml
examples/crm_api/src/: main.rs
examples/crm_api/tests/: api_conformance.rs
examples/hello_world/: Cargo.toml  eval-config.yaml
examples/hello_world/src/: lib.rs
examples/s3_distributed/: Cargo.toml  eval-config.yaml
examples/s3_distributed/src/: main.rs
examples/s3_distributed/tests/: distributed_conformance.rs
examples/s3_storage/: Cargo.toml  debug_aws_sdk.rs  eval-config.yaml  test_basic.sh  test_debug.rs  test_distributed.sh
examples/s3_storage/src/: main.rs
examples/s3_storage/tests/: debug_test.rs  distributed_conformance.rs  distributed_simple_test.rs  minimal_test.rs  s3_conformance.rs
k8s/: Dockerfile.agent  namespace.yaml  rbac.yaml
scripts/: setup-local-k8s.sh
src/: main.rs
src/agents/: types.rs
src/cli/: args.rs  config.rs
src/eval/: local_runner.rs  mod.rs  results.rs  runner.rs
src/kubernetes/: mod.rs  pod_manager.rs  pod_spec.rs
src/scoring/: mod.rs
src/web/: handlers.rs  mod.rs  server.rs  state.rs
templates/: eval_detail.html  index.html  live.html  results.html  session_detail.html
tests/: e2e_hello_world.rs
