[package]
name = "anode-eval"
version = "0.1.0"
edition = "2021"

[dependencies]
# CLI
clap = { version = "4.4", features = ["derive"] }

# Async runtime
tokio = { version = "1.35", features = ["full"] }

# Kubernetes
kube = { version = "0.87", features = ["runtime", "derive"] }
k8s-openapi = { version = "0.20", features = ["v1_28"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# UUID for unique identifiers
uuid = { version = "1.6", features = ["v4"] }

# Futures
futures = "0.3"

# Web UI
axum = "0.7"
tower-http = { version = "0.5", features = ["fs", "cors"] }
askama = "0.12"
tokio-stream = "0.1"

[dev-dependencies]
tempfile = "3.9"

[features]
default = []
e2e = []
