[package]
name = "s3_distributed"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web framework
axum = "0.7"
tokio = { version = "1", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["trace", "normalize-path"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
quick-xml = { version = "0.31", features = ["serialize"] }

# Utilities
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
sha2 = "0.10"
md-5 = "0.10"
base64 = "0.21"
hex = "0.4"
bytes = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Distributed systems
reqwest = { version = "0.11", features = ["json"] }
clap = { version = "4", features = ["derive"] }

# Async utilities
futures = "0.3"
async-trait = "0.1"

[dev-dependencies]
# HTTP client for testing (reqwest is already in main dependencies)
tokio = { version = "1", features = ["full", "test-util"] }
rand = "0.8"
