[package]
name = "s3_storage"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web framework
axum = "0.7"
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
quick-xml = { version = "0.31", features = ["serialize"] }

# Utilities
chrono = { version = "0.4", features = ["serde"] }
md-5 = "0.10"
base64 = "0.21"
uuid = { version = "1", features = ["v4"] }
bytes = "1"
hex = "0.4"

# HTTP utilities
tower-http = { version = "0.5", features = ["cors", "trace"] }
http = "1"

# Command-line parsing
clap = { version = "4", features = ["derive"] }

# HTTP client for replication
reqwest = { version = "0.11", features = ["json"] }

[dev-dependencies]
# AWS SDK for S3 testing
aws-sdk-s3 = "1"
aws-config = "1"
aws-credential-types = "1"

# HTTP client for health checks
reqwest = { version = "0.11", features = ["blocking"] }

# Testing
tokio = { version = "1", features = ["full", "test-util"] }
tokio-test = "0.4"
